--- a/src/app/core/admin/risk-create/risk-create.component.html
+++ b/src/app/core/admin/risk-create/risk-create.component.html
@@ -30,7 +30,7 @@
                         <div class="card-header bg-secondary">
                             <div class="row">
                                 <div class="col">
-                                    <h5 class="h3 mb-0">Rik Detail</h5>
+                                    <h5 class="h3 mb-0">Risk Detail</h5>
                                 </div>
                                 <div class="col text-right">
                                     <button type="button" class="btn btn-primary btn-sm">
